# QUART-Online

./: .gitignore  LICENSE  README.md  requirements.txt  test_quart.py  train_ahead_n.py  utils.py
RVQ/: dataset.py  vq_Sequence.py  vq_Sequence_perplx.py  wandb_test.py
fuyu/: modeling_fuyu.py  modeling_persimmon.py  modeling_persimmon_less.py  modeling_persimmon_less_train.py
gym_eval_scripts/: count_success.py  gym_task_loop.py  path_plan.py  play_go_isaac_run.py  quart_isaacgym_test.sh  task_configs.py
models/: mytransformer.py  quart_fuyu.py  train_vq.py  train_vq_Sequence.py  train_vq_Sequence_matplotlib.py  train_vq_Sequence_paper.py  train_vq_Sequence_wandb.py  train_vq_n.py  tsne_vq.py  vq_metrics.py  vq_val_mse.py
preprocess/: check_vq_test.py  combine_VQ_npys.py  combine_VQ_npys_split_n.py  combine_VQ_npys_split_n_one.py  init_path.py  merge_vq_js.py  test.py  tsne_bash.sh  vq_ahead_n_simjson.py  vqdata_process.py  (+2 more)
walk-these-ways-quart/resources/robots/wr2/: package.xml  readme.md
walk-these-ways-quart/resources/robots/wr2/launch/: display.launch  gazebo.launch
walk-these-ways-quart/resources/robots/wr2/meshes/: hip1_Link.STL  lower1_Link.STL  lower2_Link.STL  lower3_Link.STL  toe3_Link.STL  upper3_Link.STL
walk-these-ways-quart/resources/robots/wr2/urdf/: wr2.urdf
walk-these-ways-quart/resources/robots/wr2/wr2/: _wr2.urdf  wr2.urdf  wr2_load.urdf  wr2_mit.urdf
walk-these-ways-quart/resources/robots/wr2/wr2/meshes_wr/: hip2_Link.STL  lower.STL  lower0_Link.STL  upper2_Link.STL
walk-these-ways-quart/resources/robots/wr2/xacro/: leg.xacro
(+207 files in other folders)
