<package format="2">
  <name>wr2</name>
  <version>1.0.0</version>
  <description>The wr2 package</description>

  <maintainer email="TODO@email.com" />
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>